--- a/core/css/styles.css
+++ b/core/css/styles.css
@@ -204,6 +204,25 @@ button.flex {
   background: rgba(155, 155, 155, .2);
 }
 
+.iframe-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%;
+}
+
+.iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  margin: 0 auto;
+}
+
 .coffee {
   display: block;
   width: 180px;
