--- a/core/css/styles.css
+++ b/core/css/styles.css
@@ -126,9 +126,19 @@ img.ad {
   color: inherit;
 }
 
+#menu_content div p {
+  text-align: justify;
+}
+
+#menu_content span {
+  background-color: red;
+  width: 100%;
+  height: 1em;
+  display: inline-block;
+}
+
 #menu_content a {
   font-size: 1.3rem;
-  margin-right: .35rem;
   transition: color: .3s;
   color: inherit;
 }
@@ -155,11 +165,6 @@ button.flex {
   overflow-x: auto;
   margin-top: 6px;
   margin-bottom: -16px;
-}
-
-#menu_content div,
-#menu_content a {
-  display: inline-flex;
 }
 
 #edit_button {
